feat: added compare table

--- a/mortgage.html
+++ b/mortgage.html
@@ -1759,7 +1759,7 @@
     </main>
 
     <!-- Compare section -->
-    <aside
+    <!-- <aside
       class="fixed top-0 bottom-0 right-0 z-20 bg-white bg-opacity-90 backdrop-blur-sm pt-14 pb-8 w-[720px]"
     >
       <div class="grid grid-cols-[24px_1fr] items-center mb-8 px-4">
@@ -1786,7 +1786,7 @@
           <tr>
             <th
               scope="col"
-              class="border border-l-0 border-blue-25 max-w-[120px] min-w-[120px] h-20 border-b border-b-blue-25"
+              class="border border-blue-25 max-w-[120px] min-w-[120px] h-20 border-b border-b-blue-25"
             >
               Bank
             </th>
@@ -1825,7 +1825,7 @@
 
         <tbody>
           <tr class="border-b border-dashed border-blue-25">
-            <th scope="row" class="border-r border-blue-25 font-bold p-4">Banco BRB</th>
+            <th scope="row" class="border-l border-r border-blue-25 font-bold p-4">Banco BRB</th>
             <td class="border-r border-blue-25 p-4 text-center">R$ 192.508,00</td>
             <td class="border-r border-blue-25p-4 text-center">R$ 42.508,00</td>
             <td class="border-r border-blue-25 text-green-100 font-bold p-4 text-center">9.37</td>
@@ -1834,7 +1834,7 @@
           </tr>
 
           <tr class="border-b border-dashed border-blue-25">
-            <th scope="row" class="border-r border-blue-25 font-bold">Bradesco</th>
+            <th scope="row" class="border-l border-r border-blue-25 font-bold">Bradesco</th>
             <td class="border-r border-blue-25 p-4 text-center">R$ 189.064,00</td>
             <td class="border-r border-blue-25 p-4 text-center">R$ 39.064,00</td>
             <td class="border-r border-blue-25 text-yellow-100 font-bold p-4 text-center">10.49</td>
@@ -1843,7 +1843,7 @@
           </tr>
 
           <tr class="border-b border-dashed border-blue-25">
-            <th scope="row" class="border-r border-blue-25 font-bold p-4">Caixa</th>
+            <th scope="row" class="border-l border-r border-blue-25 font-bold p-4">Caixa</th>
             <td class="border-r border-blue-25 p-4 text-center">R$ 190.824,00</td>
             <td class="border-r border-blue-25 p-4 text-center">R$ 40.824,00</td>
             <td class="border-r border-blue-25 text-yellow-100 font-bold p-4 text-center">9.89</td>
@@ -1852,7 +1852,7 @@
           </tr>
 
           <tr class="border-b border-dashed border-blue-25">
-            <th scope="row" class="border-r border-blue-25 font-bold p-4">Inter</th>
+            <th scope="row" class="border-l border-r border-blue-25 font-bold p-4">Inter</th>
             <td class="border-r border-blue-25 p-4 text-center">R$ 186.429,00</td>
             <td class="border-r border-blue-25 p-4 text-center">R$ 36.429,00</td>
             <td class="border-r border-blue-25 text-red-100 font-bold p-4 text-center">11.49</td>
@@ -1861,7 +1861,7 @@
           </tr>
 
           <tr class="border-b border-dashed border-blue-25">
-            <th scope="row" class="border-r border-blue-25 font-bold p-4">Itaú</th>
+            <th scope="row" class="border-l border-r border-blue-25 font-bold p-4">Itaú</th>
             <td class="border-r border-blue-25 p-4 text-center">R$ 186.429,00</td>
             <td class="border-r border-blue-25 p-4 text-center">R$ 36.429,00</td>
             <td class="border-r border-blue-25 text-yellow-100 font-bold p-4 text-center">10.49</td>
@@ -1869,8 +1869,8 @@
             <td class="border-r border-blue-25 p-4 text-center">R$ 430,00</td>
           </tr>
 
-          <tr>
-            <th scope="row" class="border-r border-blue-25 font-bold p-4">Santander</th>
+          <tr class="h-screen align-[initial]">
+            <th scope="row" class="border-l border-r border-blue-25 font-bold p-4">Santander</th>
             <td class="border-r border-blue-25 p-4 text-center">R$ 189.036,00</td>
             <td class="border-r border-blue-25 p-4 text-center">R$ 39.036,00</td>
             <td class="border-r border-blue-25 text-yellow-100 font-bold p-4 text-center">10.50</td>
@@ -1879,7 +1879,7 @@
           </tr>
         </tbody>
       </table>
-    </aside>
+    </aside> -->
 
     <script type="module" src="/src/js/main.js"></script>
   </body>
