--- a/index.html
+++ b/index.html
@@ -419,12 +419,12 @@
               </h2>
 
               <ol
-                class="grid grid-cols-[repeat(4,272px)] lg:grid-cols-4 overflow-x-auto overflow-y-hidden content-center items-baseline h-min-56.25 xl:h-screen ml-4 lg:ml-0 border-l-gray-a200 border-l border-r-gray-a200 border-r"
+                class="grid grid-cols-[repeat(4,272px)] lg:grid-cols-4 overflow-x-auto overflow-y-hidden content-center h-screen ml-4 lg:ml-0 border-l-gray-a200 border-l border-r-gray-a200 border-r"
               >
                 <li
-                  class="relative overflow-hidden px-8 h-min-56.25 xl:h-screen flex flex-col justify-center lg:pb-2 hover:bg-gradient-to-b bg-blue-100 from-blue-100 to-purple-500 group"
+                  class="relative overflow-hidden px-8 h-screen flex flex-col justify-center bg-blue-100 group"
                 >
-                  <span class="text-7xl flex items-center gap-2 mb-8 font-secondary"
+                  <span class="z-10 text-7xl flex items-center gap-2 mb-8 font-secondary"
                     >01
                     <svg
                       width="150"
@@ -441,28 +441,30 @@
                     </svg>
                   </span>
 
-                  <h3 class="font-bold text-xl leading-6 mb-4">
-                    Explore o Mercado Imobiliário de na sua Região
-                  </h3>
+                  <div class="z-[1] h-56">
+                    <h3 class="z-10 font-bold text-xl leading-6 mb-4">
+                      Explore o Mercado Imobiliário de na sua Região
+                    </h3>
 
-                  <p class="text-sm leading-[18px] text-gray-50">
-                    Pesquise e analise as tendências do mercado imobiliário na sua área, incluindo o
-                    valor do metro quadrado por bairro e as estatísticas atualizadas do setor.
-                  </p>
+                    <p class="z-10 text-sm leading-[18px] text-gray-50">
+                      Pesquise e analise as tendências do mercado imobiliário na sua área, incluindo
+                      o valor do metro quadrado por bairro e as estatísticas atualizadas do setor.
+                    </p>
+                  </div>
 
-                  <div class="absolute left-0 bottom-0 overflow-hidden aspect-[291/242] w-[291px]">
+                  <div class="absolute left-0 bottom-0 overflow-hidden w-full h-screen">
                     <img
-                      src="/images/house.png"
+                      src="/images/step-card-bg.png"
                       alt="house decoration"
-                      class="absolute inset-0 scale-110 group-hover:scale-100 opacity-0 group-hover:opacity-100 transition-all duration-300 ease-in-out"
+                      class="absolute h-screen w-full opacity-0 group-hover:opacity-100 transition-all duration-300 ease-in-out"
                     />
                   </div>
                 </li>
 
                 <li
-                  class="relative overflow-hidden px-8 h-min-56.25 xl:h-screen flex flex-col justify-center pb-14 lg:pb-12 border-l-gray-a200 border-l hover:bg-gradient-to-b from-blue-100 to-purple-500 group"
+                  class="relative overflow-hidden px-8 h-screen flex flex-col justify-center border-l-gray-a200 border-l group"
                 >
-                  <span class="text-7xl flex items-center gap-2 mb-8 font-secondary"
+                  <span class="z-10 text-7xl flex items-center gap-2 mb-8 font-secondary"
                     >02
                     <svg
                       width="150"
@@ -479,26 +481,30 @@
                     </svg>
                   </span>
 
-                  <h3 class="font-bold text-xl leading-6 mb-4">Quanto vale o meu imóvel?</h3>
+                  <div class="z-[1] h-56">
+                    <h3 class="z-10 font-bold text-xl leading-6 mb-4">Quanto vale o meu imóvel?</h3>
 
-                  <p class="text-sm leading-[18px] text-gray-50">
-                    Avalie o imóvel que deseja comprar ou vender utilizando a nossa calculadora
-                    inteligente gratuita.
-                  </p>
+                    <p class="z-10 text-sm leading-[18px] text-gray-50">
+                      Avalie o imóvel que deseja comprar ou vender utilizando a nossa calculadora
+                      inteligente gratuita.
+                    </p>
+                  </div>
 
-                  <div class="absolute left-0 bottom-0 overflow-hidden aspect-[291/242] w-[291px]">
+                  <div
+                    class="absolute left-0 bottom-0 overflow-hidden w-full h-screen"
+                  >
                     <img
-                      src="/images/house.png"
+                      src="/images/step-card-bg.png"
                       alt="house decoration"
-                      class="absolute inset-0 scale-110 group-hover:scale-100 opacity-0 group-hover:opacity-100 transition-all duration-300 ease-in-out"
+                      class="absolute h-screen w-full opacity-0 group-hover:opacity-100 transition-all duration-300 ease-in-out"
                     />
                   </div>
                 </li>
 
                 <li
-                  class="relative overflow-hidden px-8 h-min-56.25 xl:h-screen flex flex-col justify-center pb-14 lg:pb-12 border-l-gray-a200 border-l hover:bg-gradient-to-b from-blue-100 to-purple-500 group"
+                  class="relative overflow-hidden px-8 h-screen flex flex-col justify-center border-l-gray-a200 border-l group"
                 >
-                  <span class="text-7xl flex items-center gap-2 mb-8 font-secondary"
+                  <span class="z-10 text-7xl flex items-center gap-2 mb-8 font-secondary"
                     >03
                     <svg
                       width="150"
@@ -513,30 +519,34 @@
                         fill="white"
                       />
                     </svg>
-
-                    <div
-                      class="absolute left-0 bottom-0 overflow-hidden aspect-[291/242] w-[291px]"
-                    >
-                      <img
-                        src="/images/house.png"
-                        alt="house decoration"
-                        class="absolute inset-0 scale-110 group-hover:scale-100 opacity-0 group-hover:opacity-100 transition-all duration-300 ease-in-out"
-                      />
-                    </div>
                   </span>
 
-                  <h3 class="font-bold text-xl leading-6 mb-4">Simule o seu crédito imobiliário</h3>
+                  <div class="z-[1] h-56">
+                    <h3 class="z-10 font-bold text-xl leading-6 mb-4">
+                      Simule o seu crédito imobiliário
+                    </h3>
 
-                  <p class="text-sm leading-[18px] text-gray-50">
-                    Descubra gratuitamente suas opções de financiamento e verifique as taxas de
-                    juros com nosso simulador online
-                  </p>
+                    <p class="z-10 text-sm leading-[18px] text-gray-50">
+                      Descubra gratuitamente suas opções de financiamento e verifique as taxas de
+                      juros com nosso simulador online
+                    </p>
+                  </div>
+
+                  <div
+                    class="absolute left-0 bottom-0 overflow-hidden w-full h-screen"
+                  >
+                    <img
+                      src="/images/step-card-bg.png"
+                      alt="house decoration"
+                      class="absolute h-screen w-full opacity-0 group-hover:opacity-100 transition-all duration-300 ease-in-out"
+                    />
+                  </div>
                 </li>
 
                 <li
-                  class="relative overflow-hidden px-8 h-min-56.25 xl:h-screen flex flex-col justify-center pb-4 border-l-gray-a200 border-l hover:bg-gradient-to-b from-blue-100 to-purple-500 group"
+                  class="relative overflow-hidden px-8 h-screen flex flex-col justify-center border-l-gray-a200 border-l group"
                 >
-                  <span class="text-7xl flex items-center gap-2 mb-8 font-secondary"
+                  <span class="z-10 text-7xl flex items-center gap-2 mb-8 font-secondary"
                     >04
                     <svg
                       width="150"
@@ -553,18 +563,22 @@
                     </svg>
                   </span>
 
-                  <h3 class="font-bold text-xl leading-6 mb-4">Encontre um corretor em sua área</h3>
+                  <div class="z-[1] h-56">
+                    <h3 class="z-10 font-bold text-xl leading-6 mb-4">
+                      Encontre um corretor em sua área
+                    </h3>
 
-                  <p class="text-sm leading-[18px] text-gray-50">
-                    Receba recomendações personalizadas dos melhores corretores de imóveis que atuam
-                    na sua área, garantindo um serviço de qualidade e confiança.
-                  </p>
+                    <p class="z-10 text-sm leading-[18px] text-gray-50">
+                      Receba recomendações personalizadas dos melhores corretores de imóveis que
+                      atuam na sua área, garantindo um serviço de qualidade e confiança.
+                    </p>
+                  </div>
 
-                  <div class="absolute left-0 bottom-0 overflow-hidden aspect-[291/242] w-[291px]">
+                  <div class="absolute left-0 bottom-0 overflow-hidden w-full h-screen">
                     <img
-                      src="/images/house.png"
+                      src="/images/step-card-bg.png"
                       alt="house decoration"
-                      class="absolute inset-0 scale-110 group-hover:scale-100 opacity-0 group-hover:opacity-100 transition-all duration-300 ease-in-out"
+                      class="absolute h-screen w-full opacity-0 group-hover:opacity-100 transition-all duration-300 ease-in-out"
                     />
                   </div>
                 </li>
