feat: updated mortgage step 4 layout

--- a/mortgage-4.html
+++ b/mortgage-4.html
@@ -246,7 +246,7 @@
       <!-- Mortgage step 4 -->
       <section class="relative bg-gradient-to-r from-blue-100 to-purple-500">
         <div
-          class="text-center text-white container mx-auto grid grid-cols-[1fr_100px_390px_100px_1fr] h-screen border-l border-r border-l-gray-a200 border-r-gray-a200"
+          class="relative z-[1] text-center text-white container mx-auto grid grid-cols-[1fr_100px_390px_100px_1fr] h-screen border-l border-r border-l-gray-a200 border-r-gray-a200"
         >
           <div class="grid row-start-1 col-start-2 col-span-3 self-center">
             <h1 class="text-7xl font-secondary mb-4">Parabéns!</h1>
@@ -272,6 +272,24 @@
           <div
             class="col-start-3 row-start-1 h-screen border-l border-r border-l-gray-a200 border-r-gray-a200"
           ></div>
+        </div>
+
+        <div class="absolute top-0 left-0 aspect-[413/652] w-[413px]">
+          <img
+            src="/images/mortgage-decoration-1.png"
+            class="absolute"
+            loading="lazy"
+            alt="decoration element"
+          />
+        </div>
+
+        <div class="absolute bottom-0 right-0 aspect-[239/726] w-[239px]">
+          <img
+            src="/images/mortgage-decoration-2.png"
+            class="absolute"
+            loading="lazy"
+            alt="decoration element"
+          />
         </div>
 
         <div
