feat: z-index config update, updated decoration images

--- a/index.html
+++ b/index.html
@@ -441,7 +441,7 @@
                     </svg>
                   </span>
 
-                  <div class="z-[1] h-56">
+                  <div class="z-1 h-56">
                     <h3 class="z-10 font-bold text-xl leading-6 mb-4">
                       Explore o Mercado Imobiliário de na sua Região
                     </h3>
@@ -481,7 +481,7 @@
                     </svg>
                   </span>
 
-                  <div class="z-[1] h-56">
+                  <div class="z-1 h-56">
                     <h3 class="z-10 font-bold text-xl leading-6 mb-4">Quanto vale o meu imóvel?</h3>
 
                     <p class="z-10 text-sm leading-[18px] text-gray-50">
@@ -490,9 +490,7 @@
                     </p>
                   </div>
 
-                  <div
-                    class="absolute left-0 bottom-0 overflow-hidden w-full h-screen"
-                  >
+                  <div class="absolute left-0 bottom-0 overflow-hidden w-full h-screen">
                     <img
                       src="/images/step-card-bg.png"
                       alt="house decoration"
@@ -521,7 +519,7 @@
                     </svg>
                   </span>
 
-                  <div class="z-[1] h-56">
+                  <div class="z-1 h-56">
                     <h3 class="z-10 font-bold text-xl leading-6 mb-4">
                       Simule o seu crédito imobiliário
                     </h3>
@@ -532,9 +530,7 @@
                     </p>
                   </div>
 
-                  <div
-                    class="absolute left-0 bottom-0 overflow-hidden w-full h-screen"
-                  >
+                  <div class="absolute left-0 bottom-0 overflow-hidden w-full h-screen">
                     <img
                       src="/images/step-card-bg.png"
                       alt="house decoration"
@@ -563,7 +559,7 @@
                     </svg>
                   </span>
 
-                  <div class="z-[1] h-56">
+                  <div class="z-1 h-56">
                     <h3 class="z-10 font-bold text-xl leading-6 mb-4">
                       Encontre um corretor em sua área
                     </h3>
@@ -750,6 +746,33 @@
             >
 
             <div class="h-screen hidden lg:flex absolute border-r border-r-blue-25 left-2/4"></div>
+          </section>
+        </div>
+
+        <div class="swiper-slide" data-slide-theme="light">
+          <!-- Browse by location section -->
+          <section class="relative bg-blue-25">
+            <div
+              class="w-[calc(100%-32px)] container mx-4 lg:mx-auto lg:h-screen grid content-center border-l border-r border-l-white border-r-white"
+            >
+              <!-- Section title -->
+              <div class="flex justify-between items-center py-16">
+                <h2 class="md:text-7xl text-[40px] leading-[48px] uppercase font-secondary">
+                  Browse by <span class="text-blue-100">location</span>
+                </h2>
+              </div>
+            </div>
+
+            <div
+              class="absolute left-2/4 top-2/4 -translate-x-2/4 -translate-y-2/4 aspect-[1075/541] w-[1075px]"
+            >
+              <img
+                src="/images/map.png"
+                class="absolute inset-0"
+                loading="lazy"
+                alt="map of the world"
+              />
+            </div>
           </section>
         </div>
 
