--- a/mortgage-3.html
+++ b/mortgage-3.html
@@ -319,7 +319,7 @@
           </div>
 
           <div
-            class="col-start-2 col-span-1 row-start-1 -z-[1] h-screen border-l border-r border-l-blue-25 border-r-blue-25"
+            class="col-start-2 col-span-1 row-start-1 -z-1 h-screen border-l border-r border-l-blue-25 border-r-blue-25"
           ></div>
         </div>
 
