--- a/mortgage-4.html
+++ b/mortgage-4.html
@@ -246,7 +246,7 @@
       <!-- Mortgage step 4 -->
       <section class="relative bg-gradient-to-r from-blue-100 to-purple-500">
         <div
-          class="relative z-[1] text-center text-white container mx-auto grid grid-cols-[1fr_100px_390px_100px_1fr] h-screen border-l border-r border-l-gray-a200 border-r-gray-a200"
+          class="relative z-1 text-center text-white container mx-auto grid grid-cols-[1fr_100px_390px_100px_1fr] h-screen border-l border-r border-l-gray-a200 border-r-gray-a200"
         >
           <div class="grid row-start-1 col-start-2 col-span-3 self-center">
             <h1 class="text-7xl font-secondary mb-4">Parabéns!</h1>
@@ -826,9 +826,7 @@
           <div class="swiper-scrollbar bg-blue-25"></div>
         </div>
 
-        <div
-          class="h-screen hidden lg:flex absolute -z-[1] border-r border-r-blue-25 left-2/4"
-        ></div>
+        <div class="h-screen hidden lg:flex absolute -z-1 border-r border-r-blue-25 left-2/4"></div>
       </section>
 
       <footer class="bg-blue-100">
