--- a/mortgage.html
+++ b/mortgage.html
@@ -1235,9 +1235,7 @@
           <div class="swiper-scrollbar bg-blue-25"></div>
         </div>
 
-        <div
-          class="h-screen hidden lg:flex absolute -z-[1] border-r border-r-blue-25 left-2/4"
-        ></div>
+        <div class="h-screen hidden lg:flex absolute -z-1 border-r border-r-blue-25 left-2/4"></div>
       </section>
 
       <!-- Imóvel Hub section -->
@@ -1395,15 +1393,31 @@
           >Descobrir Mais</a
         >
 
-        <div
-          class="h-screen hidden lg:flex absolute -z-[1] border-r border-r-blue-25 left-2/4"
-        ></div>
+        <div class="h-screen hidden lg:flex absolute -z-1 border-r border-r-blue-25 left-2/4"></div>
 
         <!-- Calculator Banner -->
         <article
           class="relative bg-gradient-to-r from-blue-100 to-purple-500 rounded-5 my-36 pl-16 py-9"
         >
-          <div class="flex items-center gap-8">
+          <div class="absolute top-0 left-0 aspect-[151/225] w-[151px]">
+            <img
+              src="/images/banner-decoration-1.png"
+              class="absolute inset-0"
+              loading="lazy"
+              alt="banner decoration element"
+            />
+          </div>
+
+          <div class="absolute right-0 bottom-0 aspect-[271/230] w-[271px]">
+            <img
+              src="/images/banner-decoration-2.png"
+              class="absolute inset-0"
+              loading="lazy"
+              alt="banner decoration element"
+            />
+          </div>
+
+          <div class="z-1 relative flex items-center gap-8">
             <div class="bg-gray-a200 size-24 flex items-center justify-center rounded-full">
               <svg
                 width="40"
@@ -1431,7 +1445,7 @@
 
           <img
             src="/svg/banner-star.svg"
-            class="absolute -bottom-[18px] -right-4"
+            class="absolute -bottom-0 right-10"
             alt="banner star cartoon character"
           />
         </article>
