feat: added new headings

--- a/mortgage-4.html
+++ b/mortgage-4.html
@@ -320,10 +320,12 @@
         class="container mx-4 lg:mx-auto grid content-center py-[148px] border-l border-r border-l-blue-25 border-r-blue-25"
       >
         <!-- Section title -->
-        <div class="flex justify-between items-center pb-16">
+        <div class="flex flex-col gap-1 items-start pb-16">
           <h2 class="md:text-7xl text-[40px] leading-[48px] mb-8 md:mb-0 uppercase font-secondary">
             Comentários dos Clientes!
           </h2>
+
+          <h3 class="text-gray-400">Comentários dos Clientes!</h3>
         </div>
 
         <!-- Testimonials carousel -->
