--- a/index.html
+++ b/index.html
@@ -590,9 +590,13 @@
           >
             <!-- Section title -->
             <div class="flex justify-between items-center py-16">
-              <h2 class="md:text-7xl text-[40px] leading-[48px] uppercase font-secondary">
-                Imóvel <span class="text-blue-100">Hub</span>
-              </h2>
+              <div class="flex flex-col gap-1">
+                <h2 class="md:text-7xl text-[40px] leading-[48px] uppercase font-secondary">
+                  Imóvel <span class="text-blue-100">Hub</span>
+                </h2>
+
+                <h3 class="text-gray-400">INTRO Descubra o passo a passo para financiar a compra de um imóvel.</h3>
+              </div>
 
               <a href="#" class="btn btn-gradient hidden md:flex">Descobrir Mais</a>
             </div>
