--- a/mortgage.html
+++ b/mortgage.html
@@ -604,12 +604,12 @@
           </h2>
 
           <ol
-            class="grid grid-cols-[repeat(4,272px)] lg:grid-cols-3 content-center items-baseline h-min-56.25 xl:h-screen ml-4 lg:ml-0 border-l-gray-a200 border-l border-r-gray-a200 border-r"
+            class="grid grid-cols-[repeat(3,272px)] lg:grid-cols-3 overflow-x-auto overflow-y-hidden content-center h-screen ml-4 lg:ml-0 border-l-gray-a200 border-l border-r-gray-a200 border-r"
           >
             <li
-              class="relative px-8 h-min-56.25 xl:h-screen flex flex-col justify-center hover:bg-gradient-to-b bg-blue-100 from-blue-100 to-purple-500 group"
+              class="relative overflow-hidden px-8 h-screen flex flex-col justify-center bg-blue-100 group"
             >
-              <span class="text-7xl flex items-center gap-2 mb-8 font-secondary"
+              <span class="z-10 text-7xl flex items-center gap-2 mb-8 font-secondary"
                 >01
                 <svg
                   width="150"
@@ -626,28 +626,30 @@
                 </svg>
               </span>
 
-              <div class="absolute max-w-80 min-h-28 mt-52">
-                <h3 class="font-bold text-xl leading-6 mb-4">Encontre as melhores taxas aqui!</h3>
+              <div class="z-1 h-56">
+                <h3 class="z-10 font-bold text-xl leading-6 mb-4">
+                  Encontre as melhores taxas aqui!
+                </h3>
 
-                <p class="text-sm leading-[18px] text-gray-50">
+                <p class="z-10 text-sm leading-[18px] text-gray-50">
                   Utilize nossa calculadora de financiamento gratuita para obter a sua simulação de
                   crédito.
                 </p>
               </div>
 
-              <div class="absolute -left-[42px] bottom-0 aspect-[450/305] w-[450px]">
+              <div class="absolute left-0 bottom-0 overflow-hidden w-full h-screen">
                 <img
-                  src="/svg/star-with-house.svg"
-                  alt="cartoon star character with house on the right"
-                  class="absolute inset-0 scale-110 group-hover:scale-100 opacity-0 group-hover:opacity-100 transition-all duration-300 ease-in-out"
+                  src="/images/step-card-bg.png"
+                  alt="house decoration"
+                  class="absolute h-screen w-full opacity-0 group-hover:opacity-100 transition-all duration-300 ease-in-out"
                 />
               </div>
             </li>
 
             <li
-              class="relative px-8 h-min-56.25 xl:h-screen flex flex-col justify-center border-l-gray-a200 border-l hover:bg-gradient-to-b from-blue-100 to-purple-500 group"
+              class="relative overflow-hidden px-8 h-screen flex flex-col justify-center border-l-gray-a200 border-l group"
             >
-              <span class="text-7xl flex items-center gap-2 mb-8 font-secondary"
+              <span class="z-10 text-7xl flex items-center gap-2 mb-8 font-secondary"
                 >02
                 <svg
                   width="150"
@@ -664,30 +666,30 @@
                 </svg>
               </span>
 
-              <div class="absolute max-w-80 min-h-28 mt-52">
-                <h3 class="font-bold text-xl leading-6 mb-4">
+              <div class="z-1 h-56">
+                <h3 class="z-10 font-bold text-xl leading-6 mb-4">
                   Receba as opções aprovadas de crédito imobiliário
                 </h3>
 
-                <p class="text-sm leading-[18px] text-gray-50">
+                <p class="z-10 text-sm leading-[18px] text-gray-50">
                   Nossos especialistas farão toda a parte burocrática, para que você consiga o seu
                   crédito de forma rápida e segura.
                 </p>
               </div>
 
-              <div class="absolute -left-[42px] bottom-0 aspect-[450/305] w-[450px]">
+              <div class="absolute left-0 bottom-0 overflow-hidden w-full h-screen">
                 <img
-                  src="/svg/star-with-house.svg"
-                  alt="cartoon star character with house on the right"
-                  class="absolute inset-0 scale-110 group-hover:scale-100 opacity-0 group-hover:opacity-100 transition-all duration-300 ease-in-out"
+                  src="/images/step-card-bg.png"
+                  alt="house decoration"
+                  class="absolute h-screen w-full opacity-0 group-hover:opacity-100 transition-all duration-300 ease-in-out"
                 />
               </div>
             </li>
 
             <li
-              class="relative px-8 h-min-56.25 xl:h-screen flex flex-col justify-center border-l-gray-a200 border-l hover:bg-gradient-to-b from-blue-100 to-purple-500 group"
+              class="relative overflow-hidden px-8 h-screen flex flex-col justify-center border-l-gray-a200 border-l group"
             >
-              <span class="text-7xl flex items-center gap-2 mb-8 font-secondary"
+              <span class="z-10 text-7xl flex items-center gap-2 mb-8 font-secondary"
                 >03
                 <svg
                   width="150"
@@ -702,22 +704,25 @@
                     fill="white"
                   />
                 </svg>
-
-                <div class="absolute -left-[42px] bottom-0 aspect-[450/305] w-[450px]">
-                  <img
-                    src="/svg/star-with-house.svg"
-                    alt="cartoon star character with house on the right"
-                    class="absolute inset-0 scale-110 group-hover:scale-100 opacity-0 group-hover:opacity-100 transition-all duration-300 ease-in-out"
-                  />
-                </div>
               </span>
 
-              <div class="absolute max-w-80 min-h-28 mt-52">
-                <h3 class="font-bold text-xl leading-6 mb-4">Crédito na mão!</h3>
+              <div class="z-1 h-56">
+                <h3 class="z-10 font-bold text-xl leading-6 mb-4">
+                  Simule o seu crédito imobiliário
+                </h3>
 
-                <p class="text-sm leading-[18px] text-gray-50">
-                  Nessa etapa, você já tem a liberação do seu crédito para conquistar seu imóvel.
+                <p class="z-10 text-sm leading-[18px] text-gray-50">
+                  Descubra gratuitamente suas opções de financiamento e verifique as taxas de juros
+                  com nosso simulador online
                 </p>
+              </div>
+
+              <div class="absolute left-0 bottom-0 overflow-hidden w-full h-screen">
+                <img
+                  src="/images/step-card-bg.png"
+                  alt="house decoration"
+                  class="absolute h-screen w-full opacity-0 group-hover:opacity-100 transition-all duration-300 ease-in-out"
+                />
               </div>
             </li>
           </ol>
@@ -729,10 +734,12 @@
         class="container mx-4 lg:mx-auto grid content-center py-[148px] border-l border-r border-l-blue-25 border-r-blue-25"
       >
         <!-- Section title -->
-        <div class="flex justify-between items-center pb-16">
+        <div class="flex flex-col gap-1 items-start pb-16">
           <h2 class="md:text-7xl text-[40px] leading-[48px] mb-8 md:mb-0 uppercase font-secondary">
             Comentários dos Clientes!
           </h2>
+
+          <h3 class="text-gray-400">Comentários dos Clientes!</h3>
         </div>
 
         <!-- Testimonials carousel -->
@@ -1244,9 +1251,17 @@
       >
         <!-- Section title -->
         <div class="flex justify-between items-center py-16">
-          <h2 class="md:text-7xl text-[40px] leading-[48px] mb-8 md:mb-0 uppercase font-secondary">
-            Imóvel <span class="text-blue-100">Hub</span>
-          </h2>
+          <div class="flex flex-col gap-1">
+            <h2
+              class="md:text-7xl text-[40px] leading-[48px] mb-8 md:mb-0 uppercase font-secondary"
+            >
+              Imóvel <span class="text-blue-100">Hub</span>
+            </h2>
+
+            <h3 class="text-gray-400">
+              INTRO Descubra o passo a passo para financiar a compra de um imóvel.
+            </h3>
+          </div>
 
           <a href="#" class="btn btn-gradient hidden md:flex">Descobrir Mais</a>
         </div>
@@ -1402,7 +1417,7 @@
           <div class="absolute top-0 left-0 aspect-[151/225] w-[151px]">
             <img
               src="/images/banner-decoration-1.png"
-              class="absolute inset-0"
+              class="absolute inset-0 rounded-tl-5"
               loading="lazy"
               alt="banner decoration element"
             />
@@ -1411,7 +1426,7 @@
           <div class="absolute right-0 bottom-0 aspect-[271/230] w-[271px]">
             <img
               src="/images/banner-decoration-2.png"
-              class="absolute inset-0"
+              class="absolute inset-0 rounded-br-5"
               loading="lazy"
               alt="banner decoration element"
             />
