feat: updated mobile styles on mortgage page, added tooltip

--- a/index.html
+++ b/index.html
@@ -583,8 +583,8 @@
           </section>
         </div>
 
+        <!-- Imóvel Hub section -->
         <div class="swiper-slide" data-slide-theme="light">
-          <!-- Imóvel Hub section -->
           <section
             class="w-[calc(100%-32px)] container mx-4 lg:mx-auto lg:h-screen grid content-center border-l border-r border-l-blue-25 border-r-blue-25"
           >
@@ -760,7 +760,7 @@
           <section class="relative bg-blue-25">
             <div
               data-active-collapse
-              class="w-[calc(100%-32px)] container mx-4 lg:mx-auto lg:h-screen grid grid-cols-3 grid-rows-[min(15vh,200px)_200px_1fr] border-l border-r border-l-white border-r-white"
+              class="w-[calc(100%-32px)] container mx-4 lg:mx-auto lg:h-screen grid grid-cols-1 lg:grid-cols-3 lg:grid-rows-[min(15vh,200px)_200px_1fr] border-l border-r border-l-white border-r-white"
             >
               <!-- Section title -->
               <div class="z-2 row-start-2 col-start-1 col-span-3 flex justify-between items-center">
@@ -3129,7 +3129,7 @@
               </ul>
 
               <div
-                class="h-screen border-l border-r border-white row-start-1 row-span-4 col-start-2 col-span-1"
+                class="hidden lg:block h-screen border-l border-r border-white row-start-1 row-span-4 col-start-2 col-span-1"
               ></div>
             </div>
 
