feat: updated pages mobile styles

--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Propdo</title>
+    <!-- Import style -->
+    <link rel="stylesheet" href="//unpkg.com/element-plus/dist/index.css" />
+    <!-- Import Vue 3 -->
+    <script src="//unpkg.com/vue@3"></script>
+    <!-- Import component library -->
+    <script src="//unpkg.com/element-plus"></script>
   </head>
   <body class="font-primary" id="app">
     <header>
@@ -586,7 +592,7 @@
         <!-- Imóvel Hub section -->
         <div class="swiper-slide" data-slide-theme="light">
           <section
-            class="w-[calc(100%-32px)] container mx-4 lg:mx-auto lg:h-screen grid content-center border-l border-r border-l-blue-25 border-r-blue-25"
+            class="w-[calc(100%-32px)] container mx-4 lg:mx-auto lg:h-screen grid grid-rows-[92px_500px] content-center border-l border-r border-l-blue-25 border-r-blue-25"
           >
             <!-- Section title -->
             <div class="flex justify-between items-center py-16">
