--- a/mortgage-3.html
+++ b/mortgage-3.html
@@ -324,7 +324,7 @@
         </div>
 
         <div
-          class="absolute bottom-0 w-full pt-6 pb-12 bg-white bg-opacity-90 backdrop-blur-sm border-t border-t-blue-25"
+          class="absolute z-10 bottom-0 w-full pt-6 pb-12 bg-white bg-opacity-90 backdrop-blur-sm border-t border-t-blue-25"
         >
           <p class="text-green-100 text-xs font-bold text-center mb-4">
             Falta pouco para você garantir sua proposta de financiamento completa!
